# yolov5-onnxruntime-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: detector.cpp  main.cpp
